Bug 415827 - Unable to enqueue all tracks at once
Summary: Unable to enqueue all tracks at once
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.03.70
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-03 04:06 UTC by quantumtraveling
Modified: 2020-01-22 15:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.12.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description quantumtraveling 2020-01-03 04:06:27 UTC
Clicking play button or enqueue button on albums, artists, or tracks pages will not affect the playlist in any way.


STEPS TO REPRODUCE
1. Navigate to "Albums" page, "Artists" page, or "Tracks" page
2. At the top of the page, click Enqueue or Play Now button

OBSERVED RESULT
Nothing happens in the application, terminal output shows this warning:


"Could not convert argument 0 at"
         "onEntriesToEnqueue@qrc:/qml/DataGridView.qml:61"
"Passing incompatible arguments to C++ functions from JavaScript is dangerous and deprecated."
"This will throw a JavaScript TypeError in future releases of Qt!"


EXPECTED RESULT
All tracks are added to playlist.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Manjaro Linux
(available in About System)
KDE Plasma Version: 5.17.4
KDE Frameworks Version: 5.65.0
Qt Version: 5.14.0
Comment 1 Matthieu Gallien 2020-01-03 09:46:17 UTC
Thanks for your report. I will have a look.

Thanks for testing master branch. This is really useful.
Comment 2 Alexander Stippich 2020-01-05 12:30:39 UTC
FYI, I cannot reproduce on current master for the Albums, Artist and Tracks view.
However, adding tracks via the genre view does not work as it tries to enlist each genre in the playlist
Comment 3 quantumtraveling 2020-01-05 23:13:00 UTC
(In reply to Alexander Stippich from comment #2)
> FYI, I cannot reproduce on current master for the Albums, Artist and Tracks
> view.
> However, adding tracks via the genre view does not work as it tries to
> enlist each genre in the playlist

Just retried and the problem seems persists on my end. I tried the current master branch, and v19.12.0 with only 1 album in the music folder, with no special characters in the paths.

I tried building v0.4.2 to test (I believe this version worked for me), but I can't seem to build it. The compiler complains of an ambiguous qCompare call.

I also just tried on a KDE Neon live system, (Elisa version 19.12.0), and it seems to work as expected. It must be some problem on my end (or possibly a problem with Manjaro packaging), then.
Comment 4 quantumtraveling 2020-01-06 03:12:29 UTC
I just tried on the latest Manjaro KDE live image (manjaro-kde-18.1.5-191229-linux54.iso), and unlike KDE Neon it appears to have this issue. Does that make this an upstream issue, or is there something that can be done to fix this in Elisa?
Comment 5 Nate Graham 2020-01-06 23:54:25 UTC
I can reproduce Alexander's issue, but not any other. Enqueuing all items in the current view works for all the other views for me.

What version of Qt does Manjaro have? I'm using 5.13.1 in openSUSE Tumbleweed.
Comment 6 quantumtraveling 2020-01-07 23:00:39 UTC
(In reply to Nate Graham from comment #5)
> I can reproduce Alexander's issue, but not any other. Enqueuing all items in
> the current view works for all the other views for me.
> 
> What version of Qt does Manjaro have? I'm using 5.13.1 in openSUSE
> Tumbleweed.

It seems we are using different versions of Qt, which may be the problem. Here is what the Info Center says on my installation:
KDE Plasma Version: 5.17.4
KDE Frameworks Version: 5.65.0
Qt Version: 5.14.0
Comment 7 Matthieu Gallien 2020-01-20 06:52:11 UTC
I can reproduce this issue with the current Windows builds.
Comment 8 Matthieu Gallien 2020-01-20 06:54:07 UTC
https://invent.kde.org/kde/elisa/merge_requests/67 has a fix for that bug.
Comment 9 Matthieu Gallien 2020-01-22 06:02:08 UTC
Git commit fcb76aec4fbd74c218c4e6e17c20a9e3c433f55e by Matthieu Gallien.
Committed on 20/01/2020 at 06:52.
Pushed by mgallien into branch 'release/19.12'.

fix problems with wrong type passed from qml to c++

M  +37   -0    src/models/abstractmediaproxymodel.cpp
M  +16   -0    src/models/abstractmediaproxymodel.h
M  +1    -2    src/qml/DataGridView.qml
M  +0    -2    src/qml/DataListView.qml

https://invent.kde.org/kde/elisa/commit/fcb76aec4fbd74c218c4e6e17c20a9e3c433f55e