fix problems with wrong type passed from qml to c++

BUG: 415827