src/models/abstractmediaproxymodel.h
@@ -28,6 +28,8 @@
 #include <QReadWriteLock>
 #include <QThreadPool>
 
+class MediaPlayList;
+
 class ELISALIB_EXPORT AbstractMediaProxyModel : public QSortFilterProxyModel
 {
 
@@ -47,6 +49,8 @@ class ELISALIB_EXPORT AbstractMediaProxyModel : public QSortFilterProxyModel
                READ sortedAscending
                NOTIFY sortedAscendingChanged)
 
+    Q_PROPERTY(MediaPlayList* playList READ playList WRITE setPlayList NOTIFY playListChanged)
+
 public:
 
     explicit AbstractMediaProxyModel(QObject *parent = nullptr);
@@ -59,6 +63,8 @@ public:
 
     bool sortedAscending() const;
 
+    MediaPlayList* playList() const;
+
 public Q_SLOTS:
 
     void setFilterText(const QString &filterText);
@@ -67,6 +73,8 @@ public Q_SLOTS:
 
     void sortModel(Qt::SortOrder order);
 
+    void setPlayList(MediaPlayList* playList);
+
 Q_SIGNALS:
 
     void filterTextChanged(const QString &filterText);
@@ -74,6 +82,8 @@ Q_SIGNALS:
     void filterRatingChanged(int filterRating);
 
     void sortedAscendingChanged();
+
+    void playListChanged();
 
     void entriesToEnqueue(const ElisaUtils::EntryDataList &newEntries,
                           ElisaUtils::PlayListEntryType databaseIdType,
@@ -84,6 +94,10 @@ protected:
 
     bool filterAcceptsRow(int source_row, const QModelIndex &source_parent) const override = 0;
 
+    void disconnectPlayList();
+
+    void connectPlayList();
+
     QString mFilterText;
 
     int mFilterRating = 0;
@@ -93,6 +107,8 @@ protected:
     QReadWriteLock mDataLock;
 
     QThreadPool mThreadPool;
+
+    MediaPlayList* mPlayList = nullptr;
 
 };
 
